# rustpython

./: .gitignore  Cargo.toml  GAP_ANALYSIS.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP-v2.md  TEST_PLAN.md  bench.py  bench2.py  bytecode_inventory.md  fix_imports.py  libtoken.rlib  refactor_modules.py  test.sh  test_abc.py  test_abc_import.py  test_advanced.py  test_all_exc.py  test_all_features.py  test_all_fixes.py  test_all_imports.py  test_all_v4.py  test_assert_fstring.py  test_both_fstring.py  test_bug1_match_first_stmt.py  test_bug2_for_tuple.py  test_bug3_dict_update.py  test_bug4_fstring_debug.py  test_builtins.py  test_builtins_v2.py  test_compat.py  test_compile.py  test_configure.py  test_copy_simple.py  test_cpython_stdlib.py  test_csv_debug.py  test_csv_reader.py  test_csv_writer.py  (+124 more)
.hermes/: ARCHITECTURE_PLAN.md
Lib/: codecs.py  contextlib.py  django  io.py  ipaddress.py  pkgutil.py  profile.py  random.py  tarfile.py  tempfile.py  token.py  tokenize.py  typing.py
Lib/asyncio/: __init__.py  coroutines.py  events.py  futures.py  iscoroutine.py  iscoroutinefunction.py  tasks.py
Lib/concurrent/futures/: __init__.py
Lib/http/: __init__.py  cookies.py
Lib/importlib/: __init__.py  machinery.py
Lib/typing/: TYPE_CHECKING.py
Lib/typing_extensions/: __init__.py
Lib/urllib/: __init__.py  parse.py
benchmarks/: compare.py  compare.sh  compare_bench.py  compare_simple.py  django_bench.py  jit_bench.py  minimal_bench.py  perf_bench.py  perf_compare.sh  pure_arith.py  realistic_bench.py  run_bench.py  test_register_vm.py  timed_bench.py
benchmarks/results/: benchmark_results.json
src/: ast.rs  bytecode.rs  compiler.rs  ffi_bridge.rs  gc.rs  interner.rs  jit.rs  main.rs  object.rs  object.rs.fix  parser.rs  sync.rs  token.rs  vm.rs
src/modules/: binascii.rs  collections_user_types.py  concurrent.rs  contextlib_extra.py  core.rs  crypto.rs  data.rs  dev.rs  enum_extra.py  files.rs  functools_extra.py  gettext_extra.py  json_extra.py  misc.rs  mod.rs  net.rs  sqlite3.rs  text.rs  time.rs  unicodedata.rs
testproject/testproject/: settings.py
tests/: _simple_test.py  _test_args.py  _test_trailing.py  bench.py  debug_findall2.py  debug_wraps2.py  test_basic.py  test_closures.py  test_collections.py  test_completo.py  test_cpython_targets.py  test_datetime.py  test_django_orm.py  test_django_orm_full.py  test_django_result.txt  test_getattr_bug.py  test_hmac.py  test_json.py  test_math.py  test_minimal_setup.py  test_missing.py  test_os.py  test_parser_advanced.py  test_patch2.py  test_populate.py  test_random.py  test_sec.py  test_simple3.py  test_staticmethod_property.py  test_stdlib.py  test_steps.py  test_tanda14.py
tests/debug/: debug_findall.py  debug_wraps.py  debug_wraps3.py
