[package]
name = "rustpython"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimizar por tamaño
lto = "thin"        # Thin LTO (menos RAM que full LTO)
codegen-units = 4   # Más unidades = menos RAM por unidad de compilación
strip = "symbols"   # Quitar símbolos de debugging
panic = "abort"     # Abortar en panic (menos código)

[profile.release-lite]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
strip = false

[features]
default = []
profile = []  # Enable execution profiling for PGO JIT
gc = []       # Enable experimental tracing garbage collector
jit = ["cranelift", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]  # Enable Cranelift JIT compilation for hot bytecode
ffi = ["libloading"]      # Enable CPython C extension loading (.so files)
sqlite3 = ["rusqlite"]    # Enable sqlite3 native module (heavy dependency)

[dependencies]
cranelift = { version = "0.109.1", optional = true }
cranelift-frontend = { version = "0.109.1", optional = true }
cranelift-jit = { version = "0.109.1", optional = true }
cranelift-module = { version = "0.109.1", optional = true }
cranelift-native = { version = "0.109.1", optional = true }
num-bigint = "0.5"
num-traits = "0.2"
libm = "0.2"
regex = "1"
fancy-regex = "0.18"
smallvec = "1"
once_cell = "1"
libloading = { version = "0.9", optional = true }
compact_str = "0.10"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
flate2 = "1"
rustyline = "18"
mimalloc = { version = "0.1", default-features = false }
rusqlite = { version = "0.40.1", default-features = false, features = ["column_decltype"], optional = true }
